# insurance-rag

./: .dockerignore  .gitignore  CODE_REVIEW.md  Dockerfile  FIXES_APPLIED.md  RAZ_RAG_REVIEW.md  README.md  build_index.py  cloudbuild.yaml  pyproject.toml  requirements.txt  run_err.txt  server.py
.claude/: settings.json
data/: MANIFEST.md  known_pii.example.json  redaction_log.json
data/processed/: chunks_fixed.jsonl  chunks_section_aware.jsonl
data/redacted/: car_policy.md  car_policy1.md  health_policy.md  home_policy.md
docs/: DESIGN_RATIONALE.md  design-spec.md  implementation-plan.md  process-log.md  project_site.html  report.md  roadmap.html
docs/superpowers/plans/: 2026-05-24-project-site.md  2026-05-28-runtime-verification-and-merge.md
docs/superpowers/specs/: 2026-05-24-project-site-design.md
eval/: ablation_results.md  answer_eval_gemini.py  answer_eval_gemini_results.md  embedding_ablation_results.md  gold_set.jsonl  gold_set_candidates.jsonl  run_eval.py  run_eval_gemini.py  selector.html
scripts/: build_gold_set.py  chunk.py  redact.py
src/: __init__.py  chunking.py  config.py  embedder.py  generation.py  indexer.py  pdf_to_md.py  redaction.py  retrieval.py  utils.py
tests/: conftest.py  test_chunking.py  test_embedder.py  test_eval.py  test_generation.py  test_indexer.py  test_redact_cli.py  test_redaction.py  test_retrieval.py  test_server.py
